<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Phone Unlock</string>
    <string name="biometric_title">PC 로그인 승인</string>
    <string name="biometric_subtitle">본인 확인 후 요청에 서명합니다</string>
    <string name="biometric_cancel">취소</string>
    <string name="widget_description">선택한 PC를 잠그거나 잠금 해제합니다.</string>
    <string name="shortcut_open_short">Phone Unlock 열기</string>
    <string name="shortcut_open_long">Phone Unlock 열기</string>
    <string name="shortcut_unlock_short">PC 잠금 해제</string>
    <string name="shortcut_unlock_long">등록된 PC 잠금 해제</string>
    <string name="shortcut_lock_short">PC 잠금</string>
    <string name="shortcut_lock_long">등록된 PC 잠금</string>
</resources>
